# bbc-x

./: .gitignore  Cargo.toml  README.md  cobertura.xml
docs/: README.md
docs/api/: crates.js  help.html  search-index.js  settings.html  src-files.js
docs/api/bbc_x/: all.html  fn.bbc_x.html  fn.main.html  index.html  sidebar-items.js
docs/api/bbc_x/args/: enum.Language.html  index.html  sidebar-items.js  struct.Args.html
docs/api/bbc_x/assembler/: fn.build_symbol_table.html  fn.confirm_all_references_defined.html  fn.generate_code.html  fn.get_definitions.html  index.html  sidebar-items.js  struct.Assembler.html
docs/api/bbc_x/assembly/: index.html  struct.Assembly.html  type.Code.html  type.MemoryAddress.html  (+2 more)
docs/coverage/: index.html
examples/: README.md  nthg.bbc
examples/sir_fredric_osborn_school_wgc_may_1974/: alph.bbc  area.bbc  base.bbc  sort.bbc  sqrt.bbc
examples/test/: instruction_set.bbc  invalid_semantics.bbc  invalid_syntax.bbc
examples/test/bbc3/: instruction_set.bbc  invalid_semantics.bbc  invalid_syntax.bbc  nthg.bbc
examples/test/bbcx/: nil.bbc  stop.bbc
src/: args.rs  assembler.rs  assembly.rs  ast.rs  bbc_x.rs  core.rs  grammar.rs  language.rs  lib.rs  list_writer.rs  main.rs  model.rs  parser.rs  result.rs
src/bbc3/: assembler.rs  assembly.rs  ast.rs  executor.rs  grammar.rs  mod.rs  parser.rs
src/bbcx/: assembler.rs  assembly.rs  ast.rs  charset.rs  executor.rs  grammar.rs  memory.rs  mod.rs  parser.rs  result.rs
src/bbcx/memory/: instruction.rs  mod.rs  result.rs  state.rs  word.rs
src/shared/: list_writer.rs
(+465 files in other folders)
