[package]
name = "bbc-x"
version = "0.1.12"
edition = "2021"

[dependencies]
clap = { version = "4", features = ["derive"] }
once_cell = "1.20.2"
pom = { version = "3.4", features = ["utf8"] }
time = { version = "0.3.34", features = ["formatting", "local-offset"] }

[dev-dependencies]
pretty_assertions = "1.4.1"
tempdir = "0.3.7"

[profile.test]
test-threads = 1

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tarpaulin_include)'] }
